fix spacing

--- a/app/assets/stylesheets/carousal/custom_style.css
+++ b/app/assets/stylesheets/carousal/custom_style.css
@@ -293,7 +293,7 @@ body {
     padding: 14px;
     width: 100%;
     margin-top: 36px;
-    margin-bottom: 77px;
+    /*margin-bottom: 77px;*/
 }
 
 .connect_section h2 {
